services/product/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: claivent/micro:product-service-0.1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8050
#          env:
#            - name: SPRING_PROFILES_ACTIVE
#              value: native
